Resolve issues reported by Sonar and FindBugs in Java client
Change-Id: I6fd99f2cb5fbf7f1643c5243cb23d0429c5ae22a
Signed-off-by: bzhangxmt <zhbinbj@cn.ibm.com>