@@ -17,12 +17,11 @@ import org.eclipse.paho.client.mqttv3.logging.LoggerFactory;
  * @see MqttPingSender
  */
 public class TimerPingSender implements MqttPingSender {
+	private static final String CLASS_NAME = TimerPingSender.class.getName();
+	private static final  Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT,CLASS_NAME); 
+	
 	private ClientComms comms;
 	private Timer timer;
-
-	private final static String className = TimerPingSender.class.getName();
-	private Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT,className); 
-
 
 	public void init(ClientComms comms) {
 		if (comms == null) {
@@ -36,7 +35,7 @@ public class TimerPingSender implements MqttPingSender {
 		String clientid = comms.getClient().getClientId();
 		
 		//@Trace 659=start timer for client:{0}
-		log.fine(className, methodName, "659", new Object[]{clientid});
+		log.fine(CLASS_NAME, methodName, "659", new Object[] { clientid });
 				
 		timer = new Timer("MQTT Ping: " + clientid);
 		//Check ping after first keep alive interval.
@@ -46,7 +45,7 @@ public class TimerPingSender implements MqttPingSender {
 	public void stop() {
 		final String methodName = "stop";
 		//@Trace 661=stop
-		log.fine(className, methodName, "661", null);
+		log.fine(CLASS_NAME, methodName, "661", null);
 		if(timer != null){
 			timer.cancel();
 		}
@@ -56,12 +55,12 @@ public class TimerPingSender implements MqttPingSender {
 		timer.schedule(new PingTask(), delayInMilliseconds);		
 	}
 	
-	class PingTask extends TimerTask {
+	private class PingTask extends TimerTask {
 		private static final String methodName = "PingTask.run";
 		
 		public void run() {
 			//@Trace 660=Check schedule at {0}
-			log.fine(className, methodName, "660", new Object[]{new Long(System.currentTimeMillis())});
+			log.fine(CLASS_NAME, methodName, "660", new Object[] { Long.valueOf(System.currentTimeMillis()) });
 			comms.checkForActivity();			
 		}
 	}
