@@ -30,7 +30,10 @@ import org.eclipse.paho.client.mqttv3.logging.LoggerFactory;
  * understood by the external API.
  */
 public class CommsCallback implements Runnable {
-	private static int INBOUND_QUEUE_SIZE = 10;
+	private static final String CLASS_NAME = CommsCallback.class.getName();
+	private static final Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT, CLASS_NAME);
+	
+	private static final int INBOUND_QUEUE_SIZE = 10;
 	private MqttCallback mqttCallback;
 	private ClientComms clientComms;
 	private Vector messageQueue;
@@ -42,9 +45,6 @@ public class CommsCallback implements Runnable {
 	private Object workAvailable = new Object();
 	private Object spaceAvailable = new Object();
 	private ClientState clientState;
-
-	final static String className = CommsCallback.class.getName();
-	Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT,	className);
 
 	CommsCallback(ClientComms clientComms) {
 		this.clientComms = clientComms;
@@ -62,7 +62,7 @@ public class CommsCallback implements Runnable {
 	 */
 	public void start(String threadName) {
 		synchronized (lifecycle) {
-			if (running == false) {
+			if (!running) {
 				// Praparatory work before starting the background thread.
 				// For safety ensure any old events are cleared.
 				messageQueue.clear();
@@ -85,14 +85,14 @@ public class CommsCallback implements Runnable {
 		synchronized (lifecycle) {
 			if (running) {
 				// @TRACE 700=stopping
-				log.fine(className, methodName, "700");
+				log.fine(CLASS_NAME, methodName, "700");
 				running = false;
 				if (!Thread.currentThread().equals(callbackThread)) {
 					try {
 						synchronized (workAvailable) {
 							// @TRACE 701=notify workAvailable and wait for run
 							// to finish
-							log.fine(className, methodName, "701");
+							log.fine(CLASS_NAME, methodName, "701");
 							workAvailable.notifyAll();
 						}
 						// Wait for the thread to finish.
@@ -103,7 +103,7 @@ public class CommsCallback implements Runnable {
 			}
 			callbackThread = null;
 			// @TRACE 703=stopped
-			log.fine(className, methodName, "703");
+			log.fine(CLASS_NAME, methodName, "703");
 		}
 	}
 
@@ -121,7 +121,7 @@ public class CommsCallback implements Runnable {
 						if (running & messageQueue.isEmpty()
 								&& completeQueue.isEmpty()) {
 							// @TRACE 704=wait for workAvailable
-							log.fine(className, methodName, "704");
+							log.fine(CLASS_NAME, methodName, "704");
 							workAvailable.wait();
 						}
 					}
@@ -168,14 +168,14 @@ public class CommsCallback implements Runnable {
 					// some space on the queue...
 
 					// @TRACE 706=notify spaceAvailable
-					log.fine(className, methodName, "706");
+					log.fine(CLASS_NAME, methodName, "706");
 					spaceAvailable.notifyAll();
 				}
 			} catch (Throwable ex) {
 				// Users code could throw an Error or Exception e.g. in the case
 				// of class NoClassDefFoundError
 				// @TRACE 714=callback threw exception
-				log.fine(className, methodName, "714", null, ex);
+				log.fine(CLASS_NAME, methodName, "714", null, ex);
 				running = false;
 				clientComms.shutdownConnection(null, new MqttException(ex));
 			}
@@ -187,7 +187,7 @@ public class CommsCallback implements Runnable {
 		final String methodName = "handleActionComplete";
 		synchronized (token) {
 			// @TRACE 705=callback and notify for key={0}
-			log.fine(className, methodName, "705",	new Object[] { token.internalTok.getKey() });
+			log.fine(CLASS_NAME, methodName, "705",	new Object[] { token.internalTok.getKey() });
 			
 			// Unblock any waiters and if pending complete now set completed
 			token.internalTok.notifyComplete();
@@ -234,14 +234,14 @@ public class CommsCallback implements Runnable {
 		try {
 			if (mqttCallback != null && cause != null) {
 				// @TRACE 708=call connectionLost
-				log.fine(className, methodName, "708", new Object[] { cause });
+				log.fine(CLASS_NAME, methodName, "708", new Object[] { cause });
 				mqttCallback.connectionLost(cause);
 			}
 		} catch (java.lang.Throwable t) {
 			// Just log the fact that a throwable has caught connection lost 
 			// is called during shutdown processing so no need to do anything else
 			// @TRACE 720=exception from connectionLost {0}
-			log.fine(className, methodName, "720", new Object[] { t });
+			log.fine(CLASS_NAME, methodName, "720", new Object[] { t });
 		}
 	}
 
@@ -259,12 +259,12 @@ public class CommsCallback implements Runnable {
 			if (asyncCB != null) {
 				if (token.getException() == null) {
 					// @TRACE 716=call onSuccess key={0}
-					log.fine(className, methodName, "716",
+					log.fine(CLASS_NAME, methodName, "716",
 							new Object[] { token.internalTok.getKey() });
 					asyncCB.onSuccess(token);
 				} else {
 					// @TRACE 717=call onFailure key {0}
-					log.fine(className, methodName, "716",
+					log.fine(CLASS_NAME, methodName, "716",
 							new Object[] { token.internalTok.getKey() });
 					asyncCB.onFailure(token, token.getException());
 				}
@@ -291,7 +291,7 @@ public class CommsCallback implements Runnable {
 				while (!quiescing && messageQueue.size() >= INBOUND_QUEUE_SIZE) {
 					try {
 						// @TRACE 709=wait for spaceAvailable
-						log.fine(className, methodName, "709");
+						log.fine(CLASS_NAME, methodName, "709");
 						spaceAvailable.wait();
 					} catch (InterruptedException ex) {
 					}
@@ -302,7 +302,7 @@ public class CommsCallback implements Runnable {
 				// Notify the CommsCallback thread that there's work to do...
 				synchronized (workAvailable) {
 					// @TRACE 710=new msg avail, notify workAvailable
-					log.fine(className, methodName, "710");
+					log.fine(CLASS_NAME, methodName, "710");
 					workAvailable.notifyAll();
 				}
 			}
@@ -319,7 +319,7 @@ public class CommsCallback implements Runnable {
 		this.quiescing = true;
 		synchronized (spaceAvailable) {
 			// @TRACE 711=quiesce notify spaceAvailable
-			log.fine(className, methodName, "711");
+			log.fine(CLASS_NAME, methodName, "711");
 			// Unblock anything waiting for space...
 			spaceAvailable.notifyAll();
 		}
@@ -340,8 +340,8 @@ public class CommsCallback implements Runnable {
 			String destName = publishMessage.getTopicName();
 
 			// @TRACE 713=call messageArrived key={0} topic={1}
-			log.fine(className, methodName, "713", new Object[] { 
-					new Integer(publishMessage.getMessageId()), destName });
+			log.fine(CLASS_NAME, methodName, "713", new Object[] { 
+					Integer.valueOf(publishMessage.getMessageId()), destName });
 			mqttCallback.messageArrived(destName, publishMessage.getMessage());
 			if (publishMessage.getMessage().getQos() == 1) {
 				this.clientComms.internalSend(new MqttPubAck(publishMessage),
@@ -362,7 +362,7 @@ public class CommsCallback implements Runnable {
 			completeQueue.addElement(token);
 			synchronized (workAvailable) {
 				// @TRACE 715=new workAvailable. key={0}
-				log.fine(className, methodName, "715", new Object[] { token.internalTok.getKey() });
+				log.fine(CLASS_NAME, methodName, "715", new Object[] { token.internalTok.getKey() });
 				workAvailable.notifyAll();
 			}
 		} else {
@@ -373,11 +373,9 @@ public class CommsCallback implements Runnable {
 				// Users code could throw an Error or Exception e.g. in the case
 				// of class NoClassDefFoundError
 				// @TRACE 719=callback threw ex:
-				log.fine(className, methodName, "719", null, ex);
+				log.fine(CLASS_NAME, methodName, "719", null, ex);
 				
 				// Shutdown likely already in progress but no harm to confirm
-				System.err.println("problem in asyncopcomplete "+ex);
-				ex.printStackTrace();
 				clientComms.shutdownConnection(null, new MqttException(ex));
 			}
 
