@@ -40,13 +40,13 @@ import org.eclipse.paho.client.mqttv3.logging.LoggerFactory;
  *   only one outstanding request of each type is allowed to be outstanding
  */
 public class CommsTokenStore {
-	/** Maps message-specific data (usually message IDs) to tokens */
+	private static final String CLASS_NAME = CommsTokenStore.class.getName();
+	private static final Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT, CLASS_NAME);
+	
+	/* Maps message-specific data (usually message IDs) to tokens */
 	private Hashtable tokens;
 	private String logContext;
 	private MqttException closedResponse = null;
-	
-	final static String className = CommsTokenStore.class.getName();
-	Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT, className);
 
 	public CommsTokenStore(String logContext) {
 		final String methodName = "<Init>";
@@ -55,7 +55,7 @@ public class CommsTokenStore {
 		this.tokens = new Hashtable();
 		this.logContext = logContext;
 		//@TRACE 308=<>
-		log.fine(className,methodName,"308");//,new Object[]{message});
+		log.fine(CLASS_NAME,methodName,"308");//,new Object[]{message});
 
 	}
 
@@ -85,7 +85,7 @@ public class CommsTokenStore {
 	public MqttToken removeToken(String key) {
 		final String methodName = "removeToken";
 		//@TRACE 306=key={0}
-		log.fine(className,methodName,"306",new Object[]{key});
+		log.fine(CLASS_NAME,methodName,"306",new Object[]{key});
 
 		if (key != null) {
 			synchronized(tokens) {
@@ -110,17 +110,17 @@ public class CommsTokenStore {
 		final String methodName = "restoreToken";
 		MqttDeliveryToken token;
 		synchronized(tokens) {
-			String key = new Integer(message.getMessageId()).toString();
+			String key = Integer.valueOf(message.getMessageId()).toString();
 			if (this.tokens.containsKey(key)) {
 				token = (MqttDeliveryToken)this.tokens.get(key);
 				//@TRACE 302=existing key={0} message={1} token={2}
-				log.fine(className,methodName, "302",new Object[]{key, message,token});
+				log.fine(CLASS_NAME,methodName, "302",new Object[]{key, message,token});
 			} else {
 				token = new MqttDeliveryToken(logContext);
 				token.internalTok.setKey(key);
 				this.tokens.put(key, token);
 				//@TRACE 303=creating new token key={0} message={1} token={2}
-				log.fine(className,methodName,"303",new Object[]{key, message, token});
+				log.fine(CLASS_NAME,methodName,"303",new Object[]{key, message, token});
 			}
 		}
 		return token;
@@ -135,7 +135,7 @@ public class CommsTokenStore {
 			if (closedResponse == null) {
 				String key = message.getKey();
 				//@TRACE 300=key={0} message={1}
-				log.fine(className,methodName,"300",new Object[]{key, message});
+				log.fine(CLASS_NAME,methodName,"300",new Object[]{key, message});
 				
 				saveToken(token,key);
 			} else {
@@ -149,7 +149,7 @@ public class CommsTokenStore {
 
 		synchronized(tokens) {
 			//@TRACE 307=key={0} token={1}
-			log.fine(className,methodName,"307",new Object[]{key,token.toString()});
+			log.fine(CLASS_NAME,methodName,"307",new Object[]{key,token.toString()});
 			token.internalTok.setKey(key);
 			this.tokens.put(key, token);
 		}
@@ -160,7 +160,7 @@ public class CommsTokenStore {
 
 		synchronized(tokens) {
 			//@TRACE 309=resp={0}
-			log.fine(className,methodName,"309",new Object[]{quiesceResponse});
+			log.fine(CLASS_NAME,methodName,"309",new Object[]{quiesceResponse});
 
 			closedResponse = quiesceResponse;
 		}
@@ -171,7 +171,7 @@ public class CommsTokenStore {
 
 		synchronized(tokens) {
 			//@TRACE 310=>
-			log.fine(className,methodName,"310");
+			log.fine(CLASS_NAME,methodName,"310");
 
 			closedResponse = null;
 		}
@@ -182,7 +182,7 @@ public class CommsTokenStore {
 
 		synchronized(tokens) {
 			//@TRACE 311=>
-			log.fine(className,methodName,"311");
+			log.fine(CLASS_NAME,methodName,"311");
 
 			Vector list = new Vector();
 			Enumeration enumeration = tokens.elements();
@@ -207,7 +207,7 @@ public class CommsTokenStore {
 
 		synchronized(tokens) {
 			//@TRACE 312=>
-			log.fine(className,methodName,"312");
+			log.fine(CLASS_NAME,methodName,"312");
 
 			Vector list = new Vector();
 			Enumeration enumeration = tokens.elements();
@@ -228,7 +228,7 @@ public class CommsTokenStore {
 	public void clear() {
 		final String methodName = "clear";
 		//@TRACE 305=> {0} tokens
-		log.fine(className, methodName, "305", new Object[] {new Integer(tokens.size())});
+		log.fine(CLASS_NAME, methodName, "305", new Object[] {Integer.valueOf(tokens.size())});
 		synchronized(tokens) {
 			tokens.clear();
 		}
