@@ -28,8 +28,6 @@ import org.eclipse.paho.client.mqttv3.internal.ExceptionHelper;
  * An on-the-wire representation of an MQTT message.
  */
 public abstract class MqttWireMessage {
-	protected static final String STRING_ENCODING = "UTF-8";
-	
 	public static final byte MESSAGE_TYPE_CONNECT = 1;
 	public static final byte MESSAGE_TYPE_CONNACK = 2;
 	public static final byte MESSAGE_TYPE_PUBLISH = 3;
@@ -45,13 +43,16 @@ public abstract class MqttWireMessage {
 	public static final byte MESSAGE_TYPE_PINGRESP = 13;
 	public static final byte MESSAGE_TYPE_DISCONNECT = 14;
 	
-	String packet_names[] = { "reserved", "CONNECT", "CONNACK", "PUBLISH",
+	protected static final String STRING_ENCODING = "UTF-8";
+	
+	private static final String PACKET_NAMES[] = { "reserved", "CONNECT", "CONNACK", "PUBLISH",
 			"PUBACK", "PUBREC", "PUBREL", "PUBCOMP", "SUBSCRIBE", "SUBACK",
 			"UNSUBSCRIBE", "UNSUBACK", "PINGREQ", "PINGRESP", "DISCONNECT" };
 
-	/** The type of the message (e.g. CONNECT, PUBLISH, PUBACK) */
+	/* The type of the message (e.g. CONNECT, PUBLISH, PUBACK) */
 	private byte type;
-	/** The MQTT message ID */
+	
+	/* The MQTT message ID */
 	protected int msgId;
 	
 	protected boolean duplicate = false;
@@ -69,7 +70,7 @@ public abstract class MqttWireMessage {
 	 * Sub-classes should override this to encode the message info.
 	 * Only the least-significant four bits will be used.
 	 */
-	abstract protected byte getMessageInfo();
+	protected abstract byte getMessageInfo();
 	
 	/**
 	 * Sub-classes should override this method to supply the payload bytes.
@@ -106,7 +107,7 @@ public abstract class MqttWireMessage {
 	 * @return key a key associated with the message
 	 */
 	public String getKey() {
-		return new Integer(getMessageId()).toString();
+		return Integer.valueOf(getMessageId()).toString();
 	}
 	
 	public byte[] getHeader() throws MqttException {
@@ -346,7 +347,7 @@ public abstract class MqttWireMessage {
 	}
 
 	public String toString() {
-		return packet_names[type];
+		return PACKET_NAMES[type];
 	}
 
 }
